@@ -1,7 +1,8 @@
 ## Change history
 
 
-* (fixed) A few issues with the MLine.Explode method when an odd number of MLineStyleElements where used.
+* (fixed) Avoid the raise of exceptions for some degenerated cases in the MLine.Explode method.
+* (fixed) A few issues with the MLine.Explode method.
 
 
 [2019/03/06] 
